--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -40,4 +40,4 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://${HOST_EUREKA}:${DB_PORT_EUREKA}/eureka/
+      defaultZone: http://localhost:8761/eureka/
